# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Stef Smeets
author_email = s.smeets@esciencecenter.nl
classifiers =
    Development Status :: 1 - Production
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = Dynamic uncertainty quantification for Tokamak reactor simulations modelling
keywords =
    plotting
    powder-diffraction
    background-correction
    profile-refinement
long_description = file: readme.md
long_description_content_type = text/markdown
name = lines
project_urls =
    Bug Tracker = https://github.com/stefsmeets/lines/issues
    Documentation = https://github.com/stefsmeets/lines
url = https://github.com/stefsmeets/lines
version = 1.4.0


[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    matplotlib
    numpy 
    scipy


[options.extras_require]
develop =
    # deployment
    bump2version
    # linting
    isort
    pre-commit
    yapf
    mypy
    # testing
    coverage
    nbmake
    pytest
    pytest-dependency
    pycodestyle


[options.entry_points]
console_scripts =
  lines = lines.lines:main


[flake8]
exclude = scripts
max-line-length = 96